# evergreen-5000

./: .gitignore  README.md
esp32/: .env.example  Cargo.toml  build.rs  sdkconfig.defaults
esp32/.cargo/: config.toml
esp32/.github/workflows/: rust_ci.yml
esp32/src/: accu.rs  deepsleep.rs  main.rs  pumps.rs  query.rs  status_signaler.rs  wifi_connect.rs
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: Main.svelte  Plant.svelte  app.html
frontend/src/lib/: index.ts
frontend/src/routes/: +page.svelte
server/: Cargo.toml  evergreen.toml
server/src/: api.rs  api_esp32.rs  api_frontend.rs  config.rs  duration_calculation.rs  main.rs  model.rs  state.rs  stateholder.rs  watering_test.rs
