[package]
name = "esp32"
version = "0.1.0"
authors = ["Julian Büttner <git@julianbuettner.dev>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
# The current ESP-IDF template only depends on esp-idf-svc directly.
# It re-exports esp-idf-hal as esp_idf_svc::hal and esp-idf-sys as esp_idf_svc::sys.
esp-idf-svc = "0.52.1"
embedded-svc = "0.29"
embedded-hal = "0.2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enumset = "1.1"

[build-dependencies]
embuild = "0.33"
dotenvy = "0.15"
