[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["macros"] }
axum-client-ip = "0.4.2"
chrono = { version = "0.4.26", features = ["serde"] }
log = "0.4.19"
serde = { version = "1.0.177", features = ["derive"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
toml_edit = { version = "0.19.14", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
