[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
axum-client-ip = "0.4.2"
chrono = { version = "0.4.39", features = ["serde"] }
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.69"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "sync", "macros"] }
toml_edit = { version = "0.22.22", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
